; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_stl.c_CreateGroupStyle.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_stl.c_CreateGroupStyle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i64, i32 }

@STYLE_NO_DEFAULTS = common dso_local global i32 0, align 4
@STYLE_HAS_FLAGS = common dso_local global i32 0, align 4
@STYLE_HAS_BACKGROUND_ALPHA = common dso_local global i32 0, align 4
@STYLE_HAS_BACKGROUND_COLOR = common dso_local global i32 0, align 4
@STYLE_ALPHA_OPAQUE = common dso_local global i32 0, align 4
@STYLE_DEFAULT_REL_FONT_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* ()* @CreateGroupStyle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @CreateGroupStyle() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i32, i32* @STYLE_NO_DEFAULTS, align 4
  %3 = call %struct.TYPE_4__* @text_style_Create(i32 %2)
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %1, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %6, label %24

6:                                                ; preds = %0
  %7 = load i32, i32* @STYLE_HAS_FLAGS, align 4
  %8 = load i32, i32* @STYLE_HAS_BACKGROUND_ALPHA, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @STYLE_HAS_BACKGROUND_COLOR, align 4
  %11 = or i32 %9, %10
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load i32, i32* @STYLE_ALPHA_OPAQUE, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 4
  store i32 %14, i32* %16, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  store i32 0, i32* %18, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 3
  store i64 0, i64* %20, align 8
  %21 = load i32, i32* @STYLE_DEFAULT_REL_FONT_SIZE, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 8
  br label %24

24:                                               ; preds = %6, %0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  ret %struct.TYPE_4__* %25
}

declare dso_local %struct.TYPE_4__* @text_style_Create(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
